# newt

./: .gitignore  OVERVIEW.html  OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py  results.md
deuteron/: README.md  __init__.py  codegen.py  pyproject.toml  runtime.py
deuteron/deuteron/: language.py  runtime.py
deuteron/examples/: 01_matmul.py  02_softmax.py  04_fused_ops.py
docs/: OVERVIEW.md  benchmarks.html  docs.html  index.html  primer.html  styles.css
examples/: 02_fused_softmax.py  04_matmul.py  05_fused_attention.py
examples/deuteron/: 03_layernorm.py
newt/: README.md  __init__.py  language.py
newt/benchmarks/: bench.py
newt/compiler/: codegen.py
newt/examples/: 01_vector_add.py  03_layernorm.py
newt/newt/: __init__.py  testing.py
newt/newt/compiler/: codegen.py  types.py
newt/newt/runtime/: jit.py
newt/runtime/: autotuner.py  cuda.py  jit.py
newt/tests/: test_matmul.py  test_review_fixes.py  test_runtime_smoke.py  test_vector_add.py
tests/: conftest.py  test_codegen_cpu.py  test_control_flow.py  test_deuteron.py  test_matmul.py  test_ops.py  test_pipeline_dot.py  test_softmax_layernorm.py
