[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "deuteron"
version = "0.1.0"
description = "A mini-Helion: PyTorch-like tile DSL compiled to autotuned newt kernels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch", "newt-lang"]

[tool.setuptools.packages.find]
include = ["deuteron*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
